Complete Serialize/Deserialize

--- a/ComputerGraphics.vcxproj.filters
+++ b/ComputerGraphics.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="Serial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShapeSerializer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Canvas2D.h">
@@ -189,6 +192,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Serial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShapeSerializer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
