--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="Serial.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="ShapeSerializer.cpp" />
     <ClCompile Include="ShapeTransformer.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -190,6 +191,7 @@
     <ClInclude Include="Screen.h" />
     <ClInclude Include="Serial.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="ShapeSerializer.h" />
     <ClInclude Include="ShapeTransformer.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="World.h" />
