--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -154,9 +154,10 @@
   <ItemGroup>
     <ClInclude Include="src\Canvas2D\Canvas2D.h" />
     <ClInclude Include="src\Canvas2D\Canvas2DExtensions.h" />
-    <ClInclude Include="src\Color\ColorPalette.h" />
+    <ClInclude Include="src\Curves\BezierCurve.h" />
     <ClInclude Include="src\DataStructures\Array.h" />
     <ClInclude Include="src\Helpers\Callback.h" />
+    <ClInclude Include="src\Helpers\Interpolation.h" />
     <ClInclude Include="src\Interfaces\IRenderable.h" />
     <ClInclude Include="src\Primitives\Constants.h" />
     <ClInclude Include="src\Primitives\Float2.h" />
@@ -165,13 +166,7 @@
     <ClInclude Include="src\Primitives\RGBAFloat.h" />
     <ClInclude Include="src\Primitives\Types.h" />
     <ClInclude Include="src\Serialization\Serial.h" />
-    <ClInclude Include="src\Serialization\ShapeSerializer.h" />
-    <ClInclude Include="src\Shapes\Circle.h" />
-    <ClInclude Include="src\Shapes\Polygon.h" />
-    <ClInclude Include="src\Shapes\Rectangle.h" />
-    <ClInclude Include="src\Shapes\Shape.h" />
     <ClInclude Include="src\UI\Button.h" />
-    <ClInclude Include="src\UI\ShapeTransformer.h" />
     <ClInclude Include="src\World\EventSystem.h" />
     <ClInclude Include="src\World\Screen.h" />
     <ClInclude Include="src\World\World.h" />
@@ -179,20 +174,14 @@
   <ItemGroup>
     <ClCompile Include="src\Canvas2D\Canvas2D.cpp" />
     <ClCompile Include="src\Canvas2D\Canvas2DExtensions.cpp" />
-    <ClCompile Include="src\Color\ColorPalette.cpp" />
+    <ClCompile Include="src\Curves\BezierCurve.cpp" />
     <ClCompile Include="src\Helpers\Callback.cpp" />
     <ClCompile Include="src\Primitives\Float2.cpp" />
     <ClCompile Include="src\Primitives\Int2.cpp" />
     <ClCompile Include="src\Primitives\Rect.cpp" />
     <ClCompile Include="src\Primitives\RGBAFloat.cpp" />
     <ClCompile Include="src\Serialization\Serial.cpp" />
-    <ClCompile Include="src\Serialization\ShapeSerializer.cpp" />
-    <ClCompile Include="src\Shapes\Circle.cpp" />
-    <ClCompile Include="src\Shapes\Polygon.cpp" />
-    <ClCompile Include="src\Shapes\Rectangle.cpp" />
-    <ClCompile Include="src\Shapes\Shape.cpp" />
     <ClCompile Include="src\UI\Button.cpp" />
-    <ClCompile Include="src\UI\ShapeTransformer.cpp" />
     <ClCompile Include="src\World\EventSystem.cpp" />
     <ClCompile Include="src\World\Main.cpp" />
     <ClCompile Include="src\World\Screen.cpp" />
