--- a/ComputerGraphics.vcxproj
+++ b/ComputerGraphics.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="src\DataStructures\Array.h" />
     <ClInclude Include="src\Helpers\Callback.h" />
     <ClInclude Include="src\Helpers\Interpolation.h" />
+    <ClInclude Include="src\Helpers\MathExtensions.h" />
     <ClInclude Include="src\Interfaces\IRenderable.h" />
     <ClInclude Include="src\Primitives\Circle.h" />
     <ClInclude Include="src\Primitives\Constants.h" />
