Update CodeBlocks project

--- a/Shapes.cbp
+++ b/Shapes.cbp
@@ -45,16 +45,24 @@
 		</Linker>
 		<Unit filename="freeglut.dll" />
 		<Unit filename="glfw3.dll" />
+		<Unit filename="include/GL/freeglut.h" />
+		<Unit filename="include/GL/freeglut_ext.h" />
+		<Unit filename="include/GL/freeglut_std.h" />
 		<Unit filename="include/GL/glut.h" />
 		<Unit filename="src/Canvas2D/Canvas2D.cpp" />
 		<Unit filename="src/Canvas2D/Canvas2D.h" />
 		<Unit filename="src/Canvas2D/Canvas2DExtensions.cpp" />
 		<Unit filename="src/Canvas2D/Canvas2DExtensions.h" />
-		<Unit filename="src/Color/ColorPalette.cpp" />
-		<Unit filename="src/Color/ColorPalette.h" />
+		<Unit filename="src/Curves/BezierCurve.cpp" />
+		<Unit filename="src/Curves/BezierCurve.h" />
 		<Unit filename="src/DataStructures/Array.h" />
+		<Unit filename="src/Helpers/Callback.cpp" />
 		<Unit filename="src/Helpers/Callback.h" />
+		<Unit filename="src/Helpers/Interpolation.h" />
+		<Unit filename="src/Helpers/MathExtensions.h" />
 		<Unit filename="src/Interfaces/IRenderable.h" />
+		<Unit filename="src/Primitives/Circle.cpp" />
+		<Unit filename="src/Primitives/Circle.h" />
 		<Unit filename="src/Primitives/Constants.h" />
 		<Unit filename="src/Primitives/Float2.cpp" />
 		<Unit filename="src/Primitives/Float2.h" />
@@ -64,23 +72,12 @@
 		<Unit filename="src/Primitives/RGBAFloat.h" />
 		<Unit filename="src/Primitives/Rect.cpp" />
 		<Unit filename="src/Primitives/Rect.h" />
+		<Unit filename="src/Primitives/Shape.h" />
 		<Unit filename="src/Primitives/Types.h" />
 		<Unit filename="src/Serialization/Serial.cpp" />
 		<Unit filename="src/Serialization/Serial.h" />
-		<Unit filename="src/Serialization/ShapeSerializer.cpp" />
-		<Unit filename="src/Serialization/ShapeSerializer.h" />
-		<Unit filename="src/Shapes/Circle.cpp" />
-		<Unit filename="src/Shapes/Circle.h" />
-		<Unit filename="src/Shapes/Polygon.cpp" />
-		<Unit filename="src/Shapes/Polygon.h" />
-		<Unit filename="src/Shapes/Rectangle.cpp" />
-		<Unit filename="src/Shapes/Rectangle.h" />
-		<Unit filename="src/Shapes/Shape.cpp" />
-		<Unit filename="src/Shapes/Shape.h" />
 		<Unit filename="src/UI/Button.cpp" />
 		<Unit filename="src/UI/Button.h" />
-		<Unit filename="src/UI/ShapeTransformer.cpp" />
-		<Unit filename="src/UI/ShapeTransformer.h" />
 		<Unit filename="src/World/EventSystem.cpp" />
 		<Unit filename="src/World/EventSystem.h" />
 		<Unit filename="src/World/Main.cpp" />
